# c_cpp_balakirev_learning

./: .clang-format  .gitignore  CMakeLists.txt  main.c
2_8_arithmetic/: h4.c  h5.c  h6.c  h7.c
3_1_boolean_type/: h4.c  h5.c
3_3_ternary_operation/: h6.c
3_5_bit_operations/: h10.c  h11.c  h3.c  h4.c  h5.c  h6.c  h8.c  h9.c
4_3_do-while/: h10.c  h2.c  h3.c  h4.c  h5.c  h6.c  h7.c  h8.c  h9.c
4_4_bkeak_continue/: h2.c
