cmake_minimum_required(VERSION 4.2)
project(c_cpp_balakirev_learning C)

set(CMAKE_C_STANDARD 11)

add_executable(c_cpp_balakirev_learning main.c
        3_3_ternary_operation/h6.c
        3_5_bit_operations/h3.c
        3_5_bit_operations/h4.c
        3_5_bit_operations/h5.c
        3_5_bit_operations/h6.c
        3_5_bit_operations/h8.c
        3_5_bit_operations/h9.c
        3_5_bit_operations/h10.c
        3_5_bit_operations/h11.c
        4_3_do-while/h2.c
        4_4_bkeak_continue/h2.c)
